# docs/openapi.yaml
@@ -61,6 +61,11 @@ paths:
           name: size
           schema:
             type: integer
+        - in: query
+          name: search
+          schema:
+            type: string
+          description: Поиск по номеру карты
       responses:
         "200":
           description: Список карт пользователя
