# src/main/java/com/example/bankcards/controller/CardController.java
@@ -55,9 +55,11 @@ public class CardController {
 
     @GetMapping("/my")
     public Page<CardDto> myCards(@RequestParam(defaultValue = "0") int page,
-                                 @RequestParam(defaultValue = "10") int size) {
+                                 @RequestParam(defaultValue = "10") int size,
+                                 @RequestParam(required = false) String search) {
         String username = userService.getCurrentUser().orElseThrow(() -> new ResourceNotFoundException("User not found")).getUsername();
-        Page<CardDto> result = cardService.findByOwner(username, PageRequest.of(page, size))
+        Page<CardDto> result = cardService
+                .findByOwner(username, PageRequest.of(page, size), search)
                 .map(CardDto::fromEntity);
         return result;
     }
